@@ -1,0 +1,2 @@
+void some_function() {}
+
